--- a/room.html
+++ b/room.html
@@ -107,7 +107,7 @@
 
       <div class="bottom-right">
         <button><i class="fas fa-paperclip"></i></button>
-        <input type="text" placeholder="Type a message" />
+        <input type="text" id="msg" placeholder="Type a message" />
         <button><i class="fas fa-paper-plane"></i></button>
       </div>
 
