usernames from firebase

--- a/room.html
+++ b/room.html
@@ -20,8 +20,8 @@
         <button class="sign-out">Sign Out</button> 
       </div>
 
-      <div class="users-container">
-        <div class="each-user">
+      <ul class="users-container">
+        <!-- <li class="each-user">
           <div class="avatar" style="background: black">
             <i class="fas fa-user-alt"></i>
           </div>
@@ -29,8 +29,8 @@
             <p class="username">Jon Snow</p>
             <i class="fas fa-circle"></i>
           </div>
-        </div>
-        <div class="each-user">
+        </li>
+        <li class="each-user">
           <div class="avatar" style="background: yellow">
             <i class="fas fa-user-alt"></i>
           </div>
@@ -38,8 +38,8 @@
             <p class="username">Daenerys Targaryen</p>
             <i class="fas fa-circle"></i>
           </div>
-        </div>
-        <div class="each-user">
+        </li>
+        <li class="each-user">
           <div class="avatar" style="background: blue">
             <i class="fas fa-user-alt"></i>
           </div>
@@ -47,8 +47,8 @@
             <p class="username">Arya Stark</p>
             <i class="fas fa-circle"></i>
           </div>
-        </div>
-      </div>
+        </li> -->
+      </ul>
 
       <div class="bottom-left">
         <div class="create-room">
