display rooms fixed

--- a/room.html
+++ b/room.html
@@ -21,7 +21,7 @@
       </div>
 
       <ul class="users-container">
-        <!-- <li class="each-user">
+        <li class="each-user">
           <div class="avatar" style="background: black">
             <i class="fas fa-user-alt"></i>
           </div>
@@ -47,7 +47,7 @@
             <p class="username">Arya Stark</p>
             <i class="fas fa-circle"></i>
           </div>
-        </li> -->
+        </li>
       </ul>
 
       <div class="bottom-left">
@@ -58,8 +58,8 @@
 
     </div>
 
-    <div class="right-container">
-      <div class="header-right">
+    <div class="middle-container">
+      <div class="header-middle">
         <h2>Default Room</h2>
         <i class="fas fa-bell-slash"></i>
         <i class="far fa-clock"></i>
@@ -117,12 +117,39 @@
         </li>
       </div>
 
-      <div class="bottom-right">
+      <div class="bottom-middle">
         <button><i class="fas fa-paperclip"></i></button>
         <input type="text" id="msg" placeholder="Type a message" autofocus/>
         <button><i class="fas fa-paper-plane"></i></button>
       </div>
 
+    </div>
+
+    <div class="right-container">
+      <div class="header-right">
+        <h3>Availabe Rooms</h3>
+      </div>
+      <ul class="rooms-container">
+        <li class="each-room">
+          <p>Default Room</p>
+          <span>Online Members: 10</span>
+        </li>
+        <li class="each-room">
+          <p>My Room</p>
+          <span>Online Members: 5</span>
+        </li>
+        <li class="each-room">
+          <p>First Room</p>
+          <span>Online Members: 25</span>
+        </li>
+        <li class="each-room">
+          <p>First Room</p>
+          <span>Online Members: 25</span>
+        </li>
+      </ul>
+      <div class="bottom-right">
+        <button class="generateURL">Invite Others</button> 
+      </div>
     </div>
   </div>
 
