Invitation link is working now

--- a/room.html
+++ b/room.html
@@ -132,19 +132,15 @@
       <ul class="rooms-container">
         <li class="each-room">
           <p>Default Room</p>
-          <span>Online Members: 10</span>
+          <span>Active Members: 10</span>
         </li>
         <li class="each-room">
           <p>My Room</p>
-          <span>Online Members: 5</span>
+          <span>Active Members: 5</span>
         </li>
         <li class="each-room">
           <p>First Room</p>
-          <span>Online Members: 25</span>
-        </li>
-        <li class="each-room">
-          <p>First Room</p>
-          <span>Online Members: 25</span>
+          <span>Active Members: 25</span>
         </li>
       </ul>
       <div class="bottom-right">
